<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/backGroundAddTask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.home.fragments.button_sheet.AddTaskFragment">

    <TextView
        style="@style/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_marginVertical="8dp"
        android:textStyle="bold"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:hint="@string/enter_task_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="3"
            android:hint="@string/enter_task_description"
            android:lines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginVertical="10dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_calendar"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Date"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_time"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Time"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="19sp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginVertical="10dp"
        />

</LinearLayout>