<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screensBackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="top"
        android:text="@string/to_do_app"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            style="@style/tintIconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon" />

        <TextView
            style="@style/textColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/to_do_app"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/backGroundBtnNav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".93">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_edit"
                style="@style/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/edit_task"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/txt_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/title_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/task_description"
                    android:lines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/description_container"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_calendar"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Select Date"
                        android:focusable="false"
                        android:clickable="true"
                        android:cursorVisible="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_time"
                    android:layout_weight="1"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Select Time"
                        android:focusable="false"
                        android:clickable="true"
                        android:cursorVisible="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:paddingVertical="15dp"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout"
                app:layout_constraintWidth_percent=".7" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>